# vulos-relay

./: .gitignore  BUILD-PLAN.md  CHANGELOG.md  CONTRIBUTING.md  COORDINATION.md  Cargo.toml  DECISIONS.md  Dockerfile  README.md  ROADMAP.md  SECURITY-TESTING.md  SECURITY.md  SLOs.md  TASKS.md  THREAT-MODEL.md  docker-compose.yml  fly.toml  go.mod  go.sum  package.json
.github/ISSUE_TEMPLATE/: security_advisory.md
.github/workflows/: ci.yml  release.yml
brand/: README.md  make-icons.mjs
client/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  tsconfig.dts.json  vite.config.lib.js  vitest.config.js
client/e2e/: library.e2e.js
client/e2e/harness/: index.html  main.jsx  vite.config.js
client/src/: chunkProof.js  endpoints.js  errors.js  fabric.js  health.js  index.js  offlineBootstrap.js  presence.js  regionPop.js  rendezvous.js  roundTripCheck.js  secureTransport.js  signaling.js  useLiveCursors.js
client/src/__tests__/: chunkProof.test.js  cursors.test.js  endpoints.test.js  fabric.dos.test.js  fabric.flow.test.js  fabric.meter.test.js  fabric.reconnect.test.js  fabric.relay.test.js  fabric.security.test.js  fabricSignaling.test.js  health.test.js  offlineBootstrap.test.js  peer-auth.test.js  presence.test.js  relay-transport-security.test.js  rendezvous.test.js  replay-timestamp.test.js  signaling.test.js
client/src/call/: fabricSignaling.js  index.js  livekitClient.js  rtc.js
cmd/relay/: main.go  main_test.go  obsadapter.go  peering_e2e_test.go  submit_test.go
cmd/vulos-relay-agent/: main.go
cmd/vulos-relayd/: main.go  roleonly_test.go
console/src/: app.css
console/src/routes/: Billing.svelte  Conformance.svelte  Descriptor.svelte  Keys.svelte  Overview.svelte  Tariff.svelte
crates/: README.md
crates/arbiter/: Cargo.toml
crates/arbiter/src/: lib.rs
crates/broker-billing/: Cargo.toml
crates/broker-billing/src/: lib.rs  meter.rs  prepaid.rs  receipt.rs  settlement.rs  stake.rs  tariff.rs
crates/broker-conformance/: Cargo.toml
crates/broker-conformance/src/: lib.rs
crates/broker-economics/: Cargo.toml
crates/broker-economics/src/: descriptor.rs  kinds.rs  kotva_core.rs  lib.rs  visibility.rs
crates/compute/: Cargo.toml
crates/compute/src/: lib.rs
crates/gateway/: Cargo.toml  README.md
crates/gateway/examples/: personal.toml  recipients.directory
crates/gateway/fuzz/: Cargo.toml  README.md
crates/gateway/src/: admin.rs  alias_map.rs  attestation.rs  authz.rs  b64.rs  coordinator.rs  directory.rs  dkim.rs  dmarc.rs  dns.rs  forwarded_addr.rs  idn.rs  imap_access.rs  inbound.rs  inbound_tcp.rs  legacy_net.rs  lib.rs  main.rs  mesh.rs  mta_sts.rs  multidomain.rs  mx.rs  net.rs  outbound.rs  outbound_guard.rs  outbound_tcp.rs  personal.rs  pop3_access.rs  provenance.rs  smtp_submission.rs  spf.rs
crates/gateway/tests/: admin_api.rs  conformance_gateway.rs  conformance_runtime.rs  daemon.rs  gateway.rs  i18n.rs  imap_access.rs  pop3_access.rs  smtp_submission.rs  sockets.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/labeler/: Cargo.toml
crates/labeler/src/: lib.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: lib.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: lib.rs
crates/reachability-adapter/: Cargo.toml
crates/reachability-adapter/src/: auth.rs  ingress.rs  lib.rs  sni.rs  tunnel.rs
crates/reachability-adapter/tests/: conformance_runtime.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs  server.rs
crates/relay/tests/: circuit.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONSOLIDATION.md  DEPLOY.md  GETTING-STARTED.md  METERING-BILLING.md  PUBCACHE.md  README.md  RELEASING.md  RENDEZVOUS.md  SECURITY.md  TROUBLESHOOTING.md  TUNNEL-GUIDE.md  TUNNEL.md
internal/obs/: obs.go  obs_test.go  security_metrics_test.go
internal/peering/: envelope.go  httptransport.go  httptransport_test.go  ingress.go  peer.go  peerconfig.go  peerconfig_test.go  replay.go  reputation_test.go  resolve.go  rotation.go  rotation_test.go
internal/queue/: queue_test.go
internal/relay/: auth.go  auth_nonce_internal_test.go  auth_test.go  multiloc_health.go  multiloc_health_test.go  ratelimit.go  router.go  router_test.go  streamsignal.go  submit.go
internal/reputation/: blocklist.go  capped.go  policy_test.go  postmaster.go  trust_test.go
internal/sending/: dkim.go  dkimsign.go  dkimsign_test.go  mtasts.go  mtasts_test.go  pipeline.go  pipeline_test.go  pool_test.go  poolsender.go  poolsender_test.go  rspamd.go  smtp.go  smtp_dkim_tls_test.go  trust.go
internal/suppression/: doc.go  ingress.go  list.go  report.go  suppression_test.go
scripts/: install.sh
security/: dkim_test.go  harness_test.go  mtasts_test.go  peering_ingress_test.go  rate_cap_test.go  replay_nonce_test.go  submit_auth_test.go  suppression_test.go  trust_segment_test.go
tunnel/: billing_e2e_test.go  drain_e2e_test.go  revocation_e2e_test.go  tunnel_test.go
tunnel/agent/: agent.go  api_test.go  conn.go  conn_leak_test.go  resolve_test.go
tunnel/autoscale/: autoscale.go  autoscale_test.go  pool.go  pool_test.go
tunnel/direct/: direct_test.go
tunnel/internal/keyauth/: keyauth.go  replay.go
tunnel/internal/wire/: wire.go
tunnel/pubcache/: interop_test.go  proof.go  proof_test.go  service.go  service_test.go  verify.go
tunnel/rendezvous/: canonical_test.go  keyaddr.go  presence.go  queue.go  service.go
tunnel/server/: admin.go  adversarial_test.go  auth.go  billing_test.go  bufpool.go  bufpool_test.go  clientip_test.go  control.go  cpclient.go  directprobe.go  directprobe_budget_test.go  directprobe_test.go  drain.go  drain_test.go  forwardedheaders_test.go  gate.go  load.go  load_test.go  logging.go  maxrequestbytes_test.go  metering.go  metering_stream_test.go  metrics.go  observability_test.go  poplink.go  poplink_test.go  proxy.go  proxy_ws.go  pubcache_mount_test.go  ratelimit_test.go  registry.go  rendezvous_metrics_test.go  revocation.go  revocation_sweep_test.go  revocation_test.go  s2snotify.go  server.go  sfuhost.go  shutdown_test.go  splice.go  (+3 more)
(+6 files in other folders)
