[package]
name = "arbiter"
description = "The KOTVA `arbiter` coordinator kind: staked dispute resolution over disclosed evidence (CONTRACT §5/§6)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
broker-economics = { path = "../broker-economics" }
broker-conformance = { path = "../broker-conformance" }
