[package]
name = "broker-conformance"
description = "The KOTVA coordinator-contract conformance harness (COORD-1..8, CONTRACT §7)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
broker-economics = { path = "../broker-economics" }
