[package]
name = "compute"
description = "The KOTVA `compute` coordinator kind (provisional): hosted/outsourced computation on rented resources, e.g. private-AI inference (CONTRACT §5/§6)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
broker-economics = { path = "../broker-economics" }
broker-conformance = { path = "../broker-conformance" }
