[package]
name = "matcher"
description = "The KOTVA `matcher` coordinator kind: real-time supply<->demand matching (rides, delivery) over its own opt-in derived match set (CONTRACT §4 derived-view carve-out, §5)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
broker-economics = { path = "../broker-economics" }
broker-conformance = { path = "../broker-conformance" }
